# quizinator_rust

./: .env  .gitignore  Cargo.toml
src/: answer.rs  app.rs  error.rs  login.rs  main.rs  question.rs  templates.rs  user_id_cookie.rs
static/: test.js
templates/: 500.html  base.html  index.html  login_error.html  login_form.html  login_page.html  show_question.html  user_input.html
